--- a/index.html
+++ b/index.html
@@ -3,10 +3,122 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <!-- Menghubungkan CSS styles.css dari folder css ke index.html -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Header -->
+    <header>
+        <!-- Ikon Home -->
+        <div class="home-icon"></div>
+        <!-- Link navigasi -->
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Our Package</a>
+            <a href="#">Call Us</a>
+        </nav>
+    </header>
+
+    <!-- Konten -->
+    <main>
+        <!-- Home/Banner Section -->
+        <h1 class="title">Your Trusted Travel Agent's</h1>
+        <h4 class="description">Your happiness is our happiness</h4>
+
+        <div class="banner">
+            <div class="banner-image">
+
+            </div>
+            <div class="testimoni-container">
+                <div class="testimoni-content">
+                    <div class="review">"Liburan jadi menyenangkan bersama Travel Agentku"</div>
+                    <div class="picture"></div>
+                    <div class="information">
+                        <span>Florence Hughes</span>
+                        <span>Ibu Rumah Tangga, 28</span>
+                    </div>
+                </div>
+                <div class="testimoni-features">
+                    <div class="features-description">Use this space to provide users with more information about your offer. Consider it a follow-up to your headline and explain the benefits of your service  or product</div>
+                    <div class="features-list">
+                        <div>1</div>
+                        <div class="list-description">Your first feature written in the form of a benefit statement.</div>
+                        <div>2</div>
+                        <div class="list-description">Your second feature written in the form of a benefit statement.</div>
+                        <div>3</div>
+                        <div class="list-description">Your third feature written in the form of benefit statement.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <aside>
+            <form action="" autocomplete="on">
+                <label for="full-name">Your Name:</label><br>
+                <input type="text" id="full-name" placeholder="Full Name" autocapitalize="words"><br><br>
+                <label for="email-address">Email Address:</label><br>
+                <input type="email" id="email-address" placeholder="name@mail.com" required><br><br>
+                <label for="interest">What are you interested in?</label><br>
+                <select name="interest" id="interest">
+                    <option value="option-1">Option 1</option>
+                    <option value="option-2">Option 2</option>
+                    <option value="option-3">Option 3</option>
+                </select><br><br>
+                <input type="submit" value="Send">
+            </form>
+        </aside>
+
+        <!-- Our Package Section -->
+        <h2>Our Package</h2>
+        <div class="features-list">
+            <div class="list-icon"></div>
+            <div class="list-destinaton">Bali</div>
+            <div class="list-description">Travel dan wisata di Bali, kunjungi cagar budaya dan kuliner yang menarik</div>
+        </div>
+        <div class="features-list">
+            <div class="list-icon"></div>
+            <div class="list-destinaton">Japan</div>
+            <div class="list-description">Travel dan wisata di Japan, kunjungi cagar budaya dan kuliner yang menarik</div>
+        </div>
+        <div class="features-list">
+            <div class="list-icon"></div>
+            <div class="list-destinaton">Singapore</div>
+            <div class="list-description">Travel dan wisata di Singapore, kunjungi cagar budaya dan kuliner yang menarik</div>
+        </div>
+        <div class="features-list">
+            <div class="list-icon"></div>
+            <div class="list-destinaton">Bandung</div>
+            <div class="list-description">Travel dan wisata di Bandung, kunjungi cagar budaya dan kuliner yang menarik</div>
+        </div>
+        <div class="features-list">
+            <div class="list-icon"></div>
+            <div class="list-destinaton">Surabaya</div>
+            <div class="list-description">Travel dan wisata di Surabaya, kunjungi cagar budaya dan kuliner yang menarik</div>
+        </div>
+        <div class="features-list">
+            <div class="list-icon"></div>
+            <div class="list-destinaton">Third Feature</div>
+            <div class="list-description">Travel dan wisata di Third Feature, kunjungi cagar budaya dan kuliner yang menarik</div>
+        </div>
+
+        <!-- Call Action Section -->
+         <h2>Your closing argument headline</h2>
+         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio at repudiandae quod molestiae expedita, eos maiores ducimus ab. Iure, asperiores!</h4>
+         <button>Call To Action</button>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <div class="home-icon">
+            <li>
+                <ul>Terms of Service</ul>
+                <ul>Privacy Policy</ul>
+            </li>
+        </div>
+        <span>Made with &heartsuit; by Ghalib Putra</span>
+    </footer>
     
+    <!-- Menghubungkan Javascript script.js dari folder js ke index.html -->
+    <script src="js/script.js"></script>
 </body>
 </html>
