Penyelesaian section our package

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header>
+    <header class="nav-header">
         <!-- Ikon Home -->
          <div class="logo">
              <div class="home-icon"></div>
@@ -38,9 +38,7 @@
              <p class="description">Petualangan kamu adalah kebahagian kami dalam membantu kamu merasakan pengalaman baru dalam hidup</p>
              <div class="container">
                  <div class="banner">
-                     <div class="banner-image">
-         
-                     </div>
+                     <div class="banner-image"></div>
                      <div class="testimoni-container">
                          <div class="testimoni-content">
                              <p class="review">"Liburan jadi menyenangkan bersama Travel Agent ku"</p>
@@ -92,6 +90,61 @@
          </section>
 
         <!-- Our Package Section -->
+         <section id="our-package">
+            <header class="our-package-header">
+                <h2>Our Package</h2>
+            </header>
+            <article>
+                <div class="container">
+                    <div class="container-item">
+                        <div class="point-icon"></div>
+                        <div class="point-content">
+                            <h3 class="content-title">Bali</h3>
+                            <div class="content-description">Travel dan wisata di Bali, kunjungi cagar budaya dan kuliner yang menarik</div>
+                        </div>
+                    </div>
+                    <div class="container-item">
+                        <div class="point-icon"></div>
+                        <div class="point-content">
+                            <h3 class="content-title">Bali</h3>
+                            <div class="content-description">Travel dan wisata di Bali, kunjungi cagar budaya dan kuliner yang menarik</div>
+                        </div>
+                    </div>
+                    <div class="container-item">
+                        <div class="point-icon"></div>
+                        <div class="point-content">
+                            <h3 class="content-title">Bali</h3>
+                            <div class="content-description">Travel dan wisata di Bali, kunjungi cagar budaya dan kuliner yang menarik</div>
+                        </div>
+                    </div>
+                </div>
+                <hr class="short-edge">
+                <div class="container">
+                    <div class="container-item">
+                        <div class="point-icon"></div>
+                        <div class="point-content">
+                            <h3 class="content-title">Bali</h3>
+                            <div class="content-description">Travel dan wisata di Bali, kunjungi cagar budaya dan kuliner yang menarik</div>
+                        </div>
+                    </div>
+                    <div class="container-item">
+                        <div class="point-icon"></div>
+                        <div class="point-content">
+                            <h3 class="content-title">Bali</h3>
+                            <div class="content-description">Travel dan wisata di Bali, kunjungi cagar budaya dan kuliner yang menarik</div>
+                        </div>
+                    </div>
+                    <div class="container-item">
+                        <div class="point-icon"></div>
+                        <div class="point-content">
+                            <h3 class="content-title">Bali</h3>
+                            <div class="content-description">Travel dan wisata di Bali, kunjungi cagar budaya dan kuliner yang menarik</div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+            </article>
+         </section>
 
         <!-- Call Action Section -->
     </main>
