Penyelesaian section call us

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                          <input type="email" id="email-address" placeholder="example@email.com" required><br><br>
                          <label for="interest">Kamu lagi ingin liburan kemana?</label><br>
                          <select name="interest" id="interest">
+                             <option value="default">Coba deh pilih dulu</option>
                              <option value="beach">Pantai</option>
                              <option value="sea">Laut</option>
                              <option value="mountain">Gunung</option>
@@ -147,6 +148,18 @@
          </section>
 
         <!-- Call Action Section -->
+         <section id="call-us">
+            <header>
+                <h2>Your Closing Argument Headline</h2>
+            </header>
+            <article>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem debitis placeat laudantium quidem explicabo, doloremque iure nulla aspernatur rerum molestiae.</p>
+                <button type="submit">
+                    CALL TO ACTION
+                </button>
+            </article>
+         </section>
+
     </main>
 
     <!-- Footer -->
