--- a/index.html
+++ b/index.html
@@ -159,11 +159,22 @@
                 </button>
             </article>
          </section>
-
     </main>
 
     <!-- Footer -->
-    
+    <footer>
+        <div class="logo">
+            <div class="home-icon"></div>
+            <span>Tragent</span>
+        </div>
+        <ul>
+            <ul>
+                <li>Terms of Service</li>
+                <li>Privacy Policy</li>
+            </ul>
+            <li>Made with &#10084; by Ghalib Putra</li>
+        </ul>
+    </footer>
     <!-- Menghubungkan Javascript script.js dari folder js ke index.html -->
     <script src="js/script.js"></script>
 </body>
