Penyelesaian Responsive Design Mobile

--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
 
                  <!-- Formulir Contact Us -->
                  <aside>
-                    <h4>Hubungi Kami</h4>
-                    <p>Kami akan menghubungi kamu dalam 24 jam setelah menentukan tujuan liburan kamu </p>
+                    <div class="container-label">
+                        <h4>Hubungi Kami</h4>
+                        <p>Kami akan menghubungi kamu dalam 24 jam setelah menentukan tujuan liburan kamu</p>
+                    </div>
                      <form name="myForm" onsubmit="return validateForm()" autocomplete="on">
                          <label for="full-name">Nama:</label><br>
                          <input type="text" name="full-name" id="full-name" placeholder="Nama Lengkap" autocapitalize="words"><br><br>
@@ -77,7 +79,7 @@
                          <input type="email" name="email-address" id="email-address" placeholder="example@email.com" required><br><br>
                          <label for="interest">Kamu lagi ingin liburan kemana?</label><br>
                          <select name="interest" id="interest" required>
-                             <option value="default">Coba deh pilih dulu</option>
+                             <option value="default" style="color: grey;">Coba deh pilih dulu</option>
                              <option value="beach">Pantai</option>
                              <option value="sea">Laut</option>
                              <option value="mountain">Gunung</option>
@@ -118,7 +120,7 @@
                             <div class="content-description">Travel dan wisata di Bali, kunjungi cagar budaya dan kuliner yang menarik</div>
                         </div>
                     </div>
-                    <div class="container-item">
+                    <div class="container-item 2">
                         <div class="point-icon"></div>
                         <div class="point-content">
                             <h3 class="content-title">Waisai</h3>
@@ -142,7 +144,7 @@
                             <div class="content-description">Travel dan wisata di Bali, kunjungi cagar budaya dan kuliner yang menarik</div>
                         </div>
                     </div>
-                    <div class="container-item">
+                    <div class="container-item 2">
                         <div class="point-icon"></div>
                         <div class="point-content">
                             <h3 class="content-title">Bali</h3>
