Pembaharuan asset gambar

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                  <div class="banner">
                      <div class="slideshow-container">
                         <div class="mySlides fade">
-                          <img src="https://pixabay.com/get/gd3c9e902517b1f2eafe492f3df99e6753bd4d8af45a1bba2b7fe7b08f5f873569a0b384504cfc9effb15d7ddd3b76d27_1280.jpg">
+                          <img src="assets/img/cotage.jpg">
                         </div>
                         <div class="mySlides fade">
-                          <img src="https://pixabay.com/get/g3e8ceedda23d76e8a7eb4a888be71b3f8f5c0b8ca68ae0c509919f50c1af0d1130c960eca08911ad598155e88f637ba2_1280.jpg">
+                          <img src="assets/img/tortoise.jpg">
                         </div>
                         <div class="mySlides fade">
-                          <img src="https://pixabay.com/get/gcbaf055b6088df65af4877552528283a1dc76ff403bd71933354da103d5b596dcf0504588279a26384d2cdc99ca24c7c_1280.jpg">
+                          <img src="assets/img/mountain.jpg">
                         </div>
                       </div>
 
